--- a/PLUGIN_NAME.uplugin
+++ b/PLUGIN_NAME.uplugin
@@ -1,10 +1,10 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0.0",
+	"VersionName": "0.1.0",
 	"FriendlyName": "PLUGIN_NAME",
 	"Description": "",
-	"Category": "Content",
+	"Category": "Other",
 	"CreatedBy": "Eu4ng",
 	"CreatedByURL": "https://github.com/Eu4ng",
 	"DocsURL": "",
@@ -12,6 +12,6 @@
 	"SupportURL": "",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
-	"IsExperimentalVersion": false,
+	"IsExperimentalVersion": true,
 	"Installed": false
 }
